<resources>
    <string name="app_name">mtApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_watch_setbox_video">watch_setbox_video</string>
    <string name="title_activity_pre_recorded_video">PreRecordedVideoActivity</string>
    <string name="title_activity_recorded_video">RecordedVideoActivity</string>
    <string name="title_activity_sbstatus">SBStatus</string>
    <string name="title_activity_remote">RemoteActivity</string>
    <string name="title_activity_pairing">PairingActivity</string>
    <string name="title_activity_upload">UploadActivity</string>
    <string name="title_activity_file_chooser">Choose File</string>
    <string name="title_activity_list_video">請選擇要觀看的影片</string>
    <string name="title_activity_exoplayer">ExoPlayer</string>

    <string name="drm_error_not_supported">Protected content not supported on API levels below 18</string>
    <string name="drm_error_unsupported_scheme">This device does not support the required DRM scheme</string>
    <string name="drm_error_unknown">An unknown DRM error occurred</string>

    <string name="enable_background_audio">Play in background</string>
    <string name="logging_normal">Normal</string>
    <string name="logging_verbose">Verbose</string>

    <string name="off">[off]</string>
    <string name="on">[on]</string>

    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="text">Text</string>
    <string name="logging">Logging</string>
    <string name="retry">Retry</string>
    <string name="title_activity_recorded">Recorded</string>
    <string name="title_activity_http">HTTPActivity</string>
</resources>
